--- a/views/register.pug
+++ b/views/register.pug
@@ -7,35 +7,43 @@ head
   link(rel='icon' href='images/icon.png' type='image/icon type')
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.11/vue.js')
+  link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+  link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
+  link(rel='stylesheet' href='style.css')
+
   // Project Local CSS
   link(rel='stylesheet' href='css/style.css')
 #container
   header
-    // <nav class="main-menu navbar navbar-expand-sm navbar-dark">
     .main-header
       .logo
         img(src='images/logo-small-2.png' alt='Modern Pet')
-      nav.main-menu.navbar.navbar-expand-sm.navbar-dark
-        #navbarContent
-          ul.navbar-nav
-            li.nav-item
-              a.nav-link(href='/') Home
-            li.nav-item
-              a.nav-link(href='#aboutDiv') About
-            li.nav-item
-              a.nav-link(href='contact') Contact Us
-            a.nav-item.btn.btn-info.buttonR(href='register') Register/Sign In
+      nav.main-menu.navbar.navbar-expand-lg.navbar-light
+        .container-fluid.navbarContent
+          button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
+            span.navbar-toggler-icon
+          #navbarNav.collapse.navbar-collapse
+            ul.navbar-nav
+              li.nav-item
+                a.nav-link(href='/') Home
+              li.nav-item
+                a.nav-link(href='/') About
+              li.nav-item
+                a.nav-link(href='contact') Contact Us
+              a.nav-item.btn.btn-info(href='register') Register/Sign In
+div
 #bottomHeader
   a(href='#')
     p CLICK HERE FOR 25% off!
 // REGISTER
-.main-wrapper
-  .title
-    h3 Register to our website
-  include form.pug
-
-.login
-  a.nav-link(href='login') Log In into your Account
+.contact
+  .contactinfo
+    include form.pug
+.contact
+  .contactinfo
+    .login
+      a.btn.btn-info.form-control(href='login') Log In into your Account
 // ABOUT US
 #aboutDiv
   #contact-b
@@ -44,21 +52,21 @@ head
     | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam egestas, odio ac sollicitudin efficitur, eros mauris malesuada ante, sit amet aliquet turpis ligula eu dui. Duis finibus leo quis lobortis cursus. Quisque fermentum urna at lacus pharetra convallis. Praesent erat ipsum, facilisis eget finibus nec, placerat in felis. Suspendisse tellus diam, congue et elementum ut, posuere congue augue. Maecenas ultrices eleifend commodo. Quisque quis turpis a dui suscipit viverra sed in velit. Vestibulum diam purus, pretium ut dui ultrices, gravida imperdiet tortor. Cras vel lorem lectus. In purus ipsum, viverra at convallis sit amet, pharetra at leo.
 
 // FOOTER
-footer
-  .logoFooter
+footer.footer
+  .logoFooter.col.col-12.col-md-3
     img(src='images/logo-small-2.png' alt='Modern Pet')
   .footerR
     .row
-      .col
+      .col.col-12.col-md-3
         h5 MAIN MENU
         ul.list-unstyled.f_list
           li
-            a(href='#') Home
+            a(href='/') Home
           li
-            a(href='#aboutDiv') About
+            a(href='/') About
           li
             a(href='/contact') Contact Us
-      .col
+      .col.col-12.col-md-3
         h5 LOCATION
         ul.list-unstyled.f_list
           li
@@ -67,7 +75,7 @@ footer
             a(href='https://goo.gl/maps/18rCxBk2LYeWNrL49' target='_blank') Alafaya
           li
             a(href='https://goo.gl/maps/vjVeq4CyDi4SPZEs9' target='_blank') Downtown
-      .col
+      .col.col-12.col-md-3
         h5 FOLLOW US!
         .row.text-center.socialbottom
           .col-12.col-md-3
@@ -82,13 +90,13 @@ footer
             a.fa.fa-facebook(href='https://m.facebook.com/search/videos/?q=%23puppies&source=filter&isTrending=0' target='_blank')
           br
           br
-  #copy.copy.col-sm-4
-    // <div id="copy" class="col-12 col-sm-2 mt-4 justify-content-end text-sm-right mr-4">
-    div &copy; Copyright 2020 : modernpet.com
-    div
-      p
-        | Website developed and designed by 
-        a(href='http://rebecatino.co' target='_blank') Rebeca Tinoco
+    .copy.col-sm-4
+      .copy &copy; Copyright 2020 : modernpet.com
+        p
+          | Website developed and designed by 
+          a(href='http://rebecatino.co' target='_blank') Rebeca Tinoco
+
+div 
 // External Files/Links
 // Font Awesome
 link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
@@ -99,4 +107,7 @@ script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
 // Popper
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js')
 // End of External Files/Links
-
+script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js')
+script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js')
